# pet-typeless

./: .gitignore  README.md
.github/workflows/: claude-review.yml  update-homebrew.yml
client/: Package.swift
client/Sources/: ASREngine.swift  AppIcon.icns  AudioEngineManager.swift  CloudASREngine.swift  CloudRewriteService.swift  Info.plist  KeyMonitor.swift  OnboardingOverlay.swift  OverlayWindow.swift  PetTypelessApp.swift  PostProcessingPipeline.swift  RecordingManager.swift  RecordingState.swift  ServerConfig.swift  ServerConnection.swift  SettingsView.swift  TextInserter.swift
infra/: deploy.sh  main.bicep  main.bicepparam
infra/modules/: containerApps.bicep  containerRegistry.bicep  logAnalytics.bicep  speech.bicep
scripts/: release.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/pet_typeless_server/: __init__.py  asr_handler.py  auth.py  config.py  doubao_asr_handler.py  doubao_protocol.py  main.py  rewrite_handler.py
