[project]
name = "pet-typeless-server"
version = "0.1.0"
description = "PetTypeless Relay Server — proxies client audio to Azure Speech SDK and rewrites via Azure OpenAI"
readme = { text = "", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "azure-cognitiveservices-speech>=1.42",
    "openai>=1.60",
    "python-dotenv>=1.0",
]

[project.scripts]
pet-typeless-server = "pet_typeless_server.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
